feat: added basic HTML layout
- Sections for each block, each one with its bare children elements
- Added some classes to section elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,54 @@
     <title>Odin landing page</title>
 </head>
 <body>
-    
+    <section class="header">
+        <nav>
+            <div><a href="" class="nav_links"></a></div>
+            <div><a href="" class="nav_links"></a></div>
+            <div><a href="" class="nav_links"></a></div>
+            <div><a href="" class="nav_links"></a></div>
+        </nav>
+    </section>
+    <section class="about">
+        <div>
+            <h1></h1>
+            <p></p>
+            <div><a href=""></a></div>
+        </div>
+        <div><img src="" alt=""></div>
+    </section>
+    <section class="main_content">
+        <h2></h2>
+        <div>
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p></p>
+        </div>
+        <div>
+            <quote></quote>
+            <p></p>
+        </div>
+    </section>
+    <section class="sign_up">
+        <div>
+            <div>
+                <h3></h3>
+                <p></p>
+            </div>
+            <button></button>
+        </div>
+    </section>
+    <footer></footer>
 </body>
 </html>
