feat: creation of /media to store images
- Created media directory
- Added logo (created with GIMP)
- Also added ID links to all nav_links

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    link
     <title>Odin landing page</title>
 </head>
 <body>
     <section class="header">
         <nav>
-            <div><a href="" class="nav_links"></a></div>
-            <div><a href="" class="nav_links"></a></div>
-            <div><a href="" class="nav_links"></a></div>
-            <div><a href="" class="nav_links"></a></div>
+            <div><a href="#top" class="nav_links">INSERT LOGO</a></div>
+            <div><a href="#about" class="nav_links"></a>ABOUT</div>
+            <div><a href="#main_content" class="nav_links">CONTENT</a></div>
+            <div><a href="#sign_up" class="nav_links">SIGN UP!</a></div>
         </nav>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div>
             <h1></h1>
             <p></p>
@@ -22,7 +23,7 @@
         </div>
         <div><img src="" alt=""></div>
     </section>
-    <section class="main_content">
+    <section class="main_content" id="main_content">
         <h2></h2>
         <div>
             <img src="" alt="">
@@ -45,7 +46,7 @@
             <p></p>
         </div>
     </section>
-    <section class="sign_up">
+    <section class="sign_up" id="sign_up">
         <div>
             <div>
                 <h3></h3>
