feat: added working PNG as logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="header">
         <nav>
-            <div><a href="#top" class="nav_links">INSERT LOGO</a></div>
+            <div><a href="#top" class="nav_links"><img src="media/glutaLogo.png" alt="logo of two cats"></a></div>
             <div><a href="#about" class="nav_links"></a>ABOUT</div>
             <div><a href="#main_content" class="nav_links">CONTENT</a></div>
             <div><a href="#sign_up" class="nav_links">SIGN UP!</a></div>
