navbar styling beginning (display and position)
- Combined border box with 100% width
- body margin to 0
- fit img to box with max height/width
- created new div with logo text and set display to inline

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    link
+    <link rel="stylesheet" href="style.css">
     <title>Odin landing page</title>
 </head>
 <body>
-    <section class="header">
-        <nav>
-            <div><a href="#top" class="nav_links"><img src="media/glutaLogo.png" alt="logo of two cats"></a></div>
-            <div><a href="#about" class="nav_links"></a>ABOUT</div>
-            <div><a href="#main_content" class="nav_links">CONTENT</a></div>
-            <div><a href="#sign_up" class="nav_links">SIGN UP!</a></div>
-        </nav>
-    </section>
+    <nav class="header">
+        <div class="logo">
+            <a href="#top" class="nav_links">
+                <img id="glutaLogo" src="media/glutaLogo.png" alt="logo of two cats">
+                <div id="logo_text">glutaGatos</div>    
+            </a>
+            </div>
+        <div><a href="#about" class="nav_links"></a>ABOUT</div>
+        <div><a href="#main_content" class="nav_links">CONTENT</a></div>
+        <div><a href="#sign_up" class="nav_links">SIGN UP!</a></div>
+    </nav>
     <section class="about" id="about">
         <div>
             <h1></h1>
