fix: fit logo into parent element
- Eliminated all divs that contained the a elements in nav to vertically align as
- Had to set height property of all parent elements so that img wouldn't overflow
- Set a elements display to flex, so that I align-items: center

--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
     <nav class="header">
-        <div class="logo">
-            <a href="#top" class="nav_links">
+        <a href="#top" class="logo">
                 <img id="glutaLogo" src="media/glutaLogo.png" alt="logo of two cats">
-                <div id="logo_text">glutaGatos</div>    
-            </a>
-            </div>
-        <div><a href="#about" class="nav_links"></a>ABOUT</div>
-        <div><a href="#main_content" class="nav_links">CONTENT</a></div>
-        <div><a href="#sign_up" class="nav_links">SIGN UP!</a></div>
+                 
+            </a><div id="logo_text"  class="nav_links">glutaGatos</div>   
+            <a href="#about">ABOUT</a>
+            <a href="#main_content">CONTENT</a>
+            <a href="#sign_up">SIGN UP!</a>
     </nav>
     <section class="about" id="about">
         <div>
