--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="#top" class="logo">
                 <img id="glutaLogo" src="media/glutaLogo.png" alt="logo of two cats">
                  
-            </a><div id="logo_text"  class="nav_links">glutaGatos</div>   
+            </a><div id="logo_text"><a href="#top">glutaGatos</a></div>   
             <a href="#about">ABOUT</a>
             <a href="#main_content">CONTENT</a>
             <a href="#sign_up">SIGN UP!</a>
