feat: set basic HTML structure for .about
- Image uploaded
- Basic text added
- CSS: display, w/h, bgc and box-sizing

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </nav>
     <section class="about" id="about">
         <div>
-            <h1></h1>
-            <p></p>
-            <div><a href=""></a></div>
+            <h1>These cats are glutawesome</h1>
+            <p>Glutamato and Glutamina are the glutaGatos, the most iconic duo you'll find in town.</p>
+            <div><a href="#sign_up">Sign up!</a></div>
         </div>
-        <div><img src="" alt=""></div>
+        <div><img src="media/main_section_glutas.jpg" alt="just a casual picture of both"></div>
     </section>
     <section class="main_content" id="main_content">
         <h2></h2>
