--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <a href="#sign_up">SIGN UP!</a>
     </nav>
     <section class="about" id="about">
-        <div>
+        <div class="about_text">
             <h1>These cats are glutawesome</h1>
             <p>Glutamato and Glutamina are the glutaGatos, the most iconic duo you'll find in town.</p>
-            <div><a href="#sign_up">Sign up!</a></div>
+            <a id="about_sign_up" href="#sign_up">Sign up!</a>
         </div>
-        <div><img src="media/main_section_glutas.jpg" alt="just a casual picture of both"></div>
+        <div class="about_image"><img id="main_section_glutas" src="media/main_section_glutas.jpg" alt="just a casual picture of both"></div>
     </section>
     <section class="main_content" id="main_content">
         <h2></h2>
