feat: basic display settings for .history

--- a/index.html
+++ b/index.html
@@ -25,24 +25,20 @@
         <div class="about_image"><img id="main_section_glutas" src="media/main_section_glutas.jpg" alt="just a casual picture of both"></div>
     </section>
     <section class="main_content" id="main_content">
-        <h2></h2>
-        <div>
+        <div class="history">
+        <h2>A little bit of history</h2>
+            <div class="history_images">
             <img src="" alt="">
-            <p></p>
-        </div>
-        <div>
+            <p>First it was just him</p>
             <img src="" alt="">
-            <p></p>
-        </div>
-        <div>
+            <p>But soon..</p>
             <img src="" alt="">
-            <p></p>
-        </div>
-        <div>
+            <p>From quiet...</p>
             <img src="" alt="">
-            <p></p>
+            <p>...to thunderlike</p>
         </div>
-        <div>
+        </div>
+        <div class="quote">
             <quote></quote>
             <p></p>
         </div>
