feat: flexed the img p pairs
- All (text and imgs) centered
- Max-width: min-content; sets width to max the img

--- a/index.html
+++ b/index.html
@@ -26,16 +26,24 @@
     </section>
     <section class="main_content" id="main_content">
         <div class="history">
-        <h2>A little bit of history</h2>
-            <div class="history_images">
-            <img src="" alt="">
-            <p>First it was just him</p>
-            <img src="" alt="">
-            <p>But soon..</p>
-            <img src="" alt="">
-            <p>From quiet...</p>
-            <img src="" alt="">
-            <p>...to thunderlike</p>
+        <h2>A little bit of history</h2>    
+        <div class="history_images">
+            <div class="history_images_pairs">
+                <img src="" alt="">
+                <p>First it was just him</p>
+            </div>
+            <div class="history_images_pairs">
+                <img src="" alt="">
+                <p>But soon..</p>
+            </div>
+            <div class="history_images_pairs">
+                <img src="" alt="">
+                <p>From quiet...</p>
+            </div>
+            <div class="history_images_pairs">
+                <img src="" alt="">
+                <p>...to thunderlike</p>
+            </div>
         </div>
         </div>
         <div class="quote">
