feat: added imgs to history

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <h2>A little bit of history</h2>    
         <div class="history_images">
             <div class="history_images_pairs">
-                <img src="" alt="">
+                <img src="media/glutamato_celeste_bg.png" alt="glutamato sobre fondo celeste">
                 <p>First it was just him</p>
             </div>
             <div class="history_images_pairs">
-                <img src="" alt="">
+                <img src="media/glutas_en_silla.png" alt="cats on a chair">
                 <p>But soon..</p>
             </div>
             <div class="history_images_pairs">
-                <img src="" alt="">
+                <img src="media/gluta_lameton.png" alt="cats licking each other">
                 <p>From quiet...</p>
             </div>
             <div class="history_images_pairs">
-                <img src="" alt="">
+                <img src="media/gluta_locos.png" alt="WTF cats">
                 <p>...to thunderlike</p>
             </div>
         </div>
