feat: finished main_section
- fix: padding issues regarding children of main_section

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
         </div>
         <div class="quote">
-            <quote></quote>
-            <p></p>
+            <p>"I may be a cute little black kitten, but don't be fooled by my innocent facade. I have a mischievous side that delights in teasing my human boss. Oh, the joy I feel when I see their exasperated face! It's my little way of spreading laughter in this chaotic world. Meow with a wicked grin!"</p>
+            <p class="quote_author">- Glutamato</p>
         </div>
     </section>
     <section class="sign_up" id="sign_up">
