feat: sign up and footer

--- a/index.html
+++ b/index.html
@@ -1,65 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Odin landing page</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="header">
-        <a href="#top" class="logo">
-                <img id="glutaLogo" src="media/glutaLogo.png" alt="logo of two cats">
-                 
-            </a><div id="logo_text"><a href="#top">glutaGatos</a></div>   
-            <a href="#about">ABOUT</a>
-            <a href="#main_content">CONTENT</a>
-            <a href="#sign_up">SIGN UP!</a>
+      <a href="#top" class="logo">
+        <img id="glutaLogo" src="media/glutaLogo.png" alt="logo of two cats" />
+      </a>
+      <div id="logo_text"><a href="#top">glutaGatos</a></div>
+      <a href="#about">ABOUT</a>
+      <a href="#main_content">CONTENT</a>
+      <a href="#sign_up">SIGN UP!</a>
     </nav>
     <section class="about" id="about">
-        <div class="about_text">
-            <h1>These cats are glutawesome</h1>
-            <p>Glutamato and Glutamina are the glutaGatos, the most iconic duo you'll find in town.</p>
-            <a id="about_sign_up" href="#sign_up">Sign up!</a>
-        </div>
-        <div class="about_image"><img id="main_section_glutas" src="media/main_section_glutas.jpg" alt="just a casual picture of both"></div>
+      <div class="about_text">
+        <h1>These cats are glutawesome</h1>
+        <p>
+          Glutamato and Glutamina are the glutaGatos, the most iconic duo you'll
+          find in town.
+        </p>
+        <a id="about_sign_up" href="#sign_up">Sign up!</a>
+      </div>
+      <div class="about_image">
+        <img
+          id="main_section_glutas"
+          src="media/main_section_glutas.jpg"
+          alt="just a casual picture of both"
+        />
+      </div>
     </section>
     <section class="main_content" id="main_content">
-        <div class="history">
-        <h2>A little bit of history</h2>    
+      <div class="history">
+        <h2>A little bit of history</h2>
         <div class="history_images">
-            <div class="history_images_pairs">
-                <img src="media/glutamato_celeste_bg.png" alt="glutamato sobre fondo celeste">
-                <p>First it was just him</p>
-            </div>
-            <div class="history_images_pairs">
-                <img src="media/glutas_en_silla.png" alt="cats on a chair">
-                <p>But soon..</p>
-            </div>
-            <div class="history_images_pairs">
-                <img src="media/gluta_lameton.png" alt="cats licking each other">
-                <p>From quiet...</p>
-            </div>
-            <div class="history_images_pairs">
-                <img src="media/gluta_locos.png" alt="WTF cats">
-                <p>...to thunderlike</p>
-            </div>
+          <div class="history_images_pairs">
+            <img
+              src="media/glutamato_celeste_bg.png"
+              alt="glutamato sobre fondo celeste"
+            />
+            <p>First it was just him</p>
+          </div>
+          <div class="history_images_pairs">
+            <img src="media/glutas_en_silla.png" alt="cats on a chair" />
+            <p>But soon..</p>
+          </div>
+          <div class="history_images_pairs">
+            <img src="media/gluta_lameton.png" alt="cats licking each other" />
+            <p>From quiet...</p>
+          </div>
+          <div class="history_images_pairs">
+            <img src="media/gluta_locos.png" alt="WTF cats" />
+            <p>...to thunderlike</p>
+          </div>
         </div>
-        </div>
-        <div class="quote">
-            <p>"I may be a cute little black kitten, but don't be fooled by my innocent facade. I have a mischievous side that delights in teasing my human boss. Oh, the joy I feel when I see their exasperated face! It's my little way of spreading laughter in this chaotic world. Meow with a wicked grin!"</p>
-            <p class="quote_author">- Glutamato</p>
-        </div>
+      </div>
+      <div class="quote">
+        <p>
+          "I may be a cute little black kitten, but don't be fooled by my
+          innocent facade. I have a mischievous side that delights in teasing my
+          human boss. Oh, the joy I feel when I see their exasperated face! It's
+          my little way of spreading laughter in this chaotic world. Meow with a
+          wicked grin!"
+        </p>
+        <p class="quote_author">- Glutamato</p>
+      </div>
     </section>
     <section class="sign_up" id="sign_up">
-        <div>
-            <div>
-                <h3></h3>
-                <p></p>
-            </div>
-            <button></button>
+      <div class="sign_up_blue_box">
+        <div class="sign_up_text">
+          <h3>Meow? Meow meow meow!</h3>
+          <p>
+            Don't miss out on the latest adventures and mischiefs of the
+            glutaGatos! Sign up now!
+          </p>
         </div>
+        <button id="sign_up_button">Sign up!</button>
+      </div>
     </section>
-    <footer></footer>
-</body>
+    <footer>Copyright &copy GlutaGatos 2023</footer>
+  </body>
 </html>
