feat: added image slider + dropdown menu

--- a/index.html
+++ b/index.html
@@ -40,13 +40,61 @@
           <br />
           <a id="about_sign_up" href="#sign_up">Sign up!</a>
         </div>
-        <!-- ADD Slider here -->
-        <div class="about_image">
-          <img
-            id="main_section_glutas"
-            src="media/main_section_glutas.jpg"
-            alt="just a casual picture of both"
-          />
+        <div id="about_slider_container">
+          <div id="slider_frame">
+            <button class="slider_buttons" id="back_button" type="button">
+              <
+            </button>
+            <div id="slider_container">
+              <img
+                id="main_section_glutas"
+                class="main_section_glutas centered"
+                src="media/main_section_glutas.jpg"
+                alt="just a casual picture of both"
+              />
+              <img
+                id="durmiendo_cama"
+                class="main_section_glutas"
+                src="media/durmiendo_cama.jpg"
+                alt="gatos durmiendo en cama"
+              />
+              <img
+                id="gluta_corazon"
+                class="main_section_glutas"
+                src="media/gluta_corazon.jpg"
+                alt="gatitos corazones"
+              />
+              <img
+                id="minalisa"
+                class="main_section_glutas"
+                src="media/minalisa.jpg"
+                alt="gatita monalisa"
+              />
+              <img
+                id="glutas_nevera"
+                class="main_section_glutas"
+                src="media/glutas_nevera.jpg"
+                alt="gatitos sobre nevera"
+              />
+              <img
+                id="posando_cama"
+                class="main_section_glutas"
+                src="media/posando_cama.jpg"
+                alt="gatitos posando en cama"
+              />
+            </div>
+            <button class="slider_buttons" id="forward_button" type="button">
+              >
+            </button>
+          </div>
+          <div id="slider_dots_container">
+            <div class="slider_dots selected_dot" id="dot1"></div>
+            <div class="slider_dots" id="dot2"></div>
+            <div class="slider_dots" id="dot3"></div>
+            <div class="slider_dots" id="dot4"></div>
+            <div class="slider_dots" id="dot5"></div>
+            <div class="slider_dots" id="dot6"></div>
+          </div>
         </div>
       </div>
     </section>
@@ -101,6 +149,3 @@
     <footer>Copyright &copy GlutaGatos 2023</footer>
   </body>
 </html>
-
-<!-- Dropdown menus on hover  -->
-<!-- Image slider (in hero) -->
